# flashkick-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: linting.yml  testing.yml
src/: lib.rs
